mods/website/web/css/website-base.css
*, *::before, *::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
}

nav {
  width: 100vw;
}

nav>img {
  width: 100px;
  height: 100px;
  margin-left: 3rem;
}

body {
  background-image: url("/saito/img/dreamscape.png");
  background-position: cover;
  height: 100vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  align-items: center;
  color: #fff;
  background-size: 100% 125%;

}

.content {
  /* margin-top: 9rem; */
  width: 80%;
  max-width: 1200px;
  height: 90%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
}


.mask {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
  background: #0008;
  padding: 0 3rem;
  min-width: 700px;
}

.links {
  display: flex;
  width: 100%;
  margin: 3rem 0 0 0;
  gap: 1rem;
}

.content>img {
  font-size: 4rem;
  margin-bottom: 2rem;
  color: white
}

.feature {
  overflow: hidden;
  position: absolute;
  z-index: -1;
}
/*
@media (orientation: landscape) {
  video {
    width: 100vw;
  }
  .feature {
    width: 100vw;
  }
}

@media (orientation: portrait) {
  video {
    width: 110vh;
  }
  .feature {
    width: 110vh;
  }
}
*/

video {
    width: 100vw;
    height: 100vh; 
    object-fit: cover;
  }
  .feature {
    width: 100vw;
    display: flex;
    justify-content: center;

  }



@media screen and (max-width: 99px ) {
  video {
    width: 100vh;
    width: 100vw;
  }

  .content > h1 {
    font-size: 2rem;
  }

  .links a button {
    width: 75vw;
}
  
}
/* 
@media (max-aspect-ratio: 9/5) {
  video {
    width: 100vh;
  }
  .feature {
    width: 100vh;
  }
} */


.banner-logo {
  width: 30vw;
  ;
  min-width: 200px;
  max-width: 700px;
  /* position: absolute; */
  right: 5rem;
  top: 1rem;
  /* transform: rotateZ(33deg); */
  /* animation: rotate; */
  animation-duration: 10s;
  animation-iteration-count: infinite;
  animation-fill-mode: forwards;
}

.links a button {
  border: 2px solid #fff;
  text-shadow: none;
  color: #fff;
  background: linear-gradient(45deg, transparent, transparent, #fff8, transparent, transparent);
  background-size: 300%;
  background-position: left;
}

.links a button:hover {
  transform: scale(1.025);
  background-position: right;
  text-shadow: none;
  color: #fff;
}

hr {
  height: 1px;
  width: 100%;
  margin: 4rem 0;
  border: 0px;
  border-top: 2px solid #fff;
}

@keyframes rotate {
  0% {
    transform: rotateX(30deg) rotateZ(30deg);
  }
  50% {
    transform: rotateX(180deg) rotateZ(180deg);
  }
  75% {
    transform: rotateX(270deg) rotateZ(270deg);
  }
  100% {
    transform: rotateX(30deg) rotateZ(30deg);
  }
}

@media screen and (max-width: 1370px) {
  .content__links>a {
    width: 15rem;
  }
}

@media screen and (max-width: 1370px) {
  .content__links>a {
    width: 15rem;
  }
}

@media screen and (max-width: 1185px) {
  .content__links>a {
    width: 12rem;
  }
}

@media screen and (max-width: 970px) {
  .content>h1 {
    font-size: 2rem;
  }
  .links {
    display: flex;
    flex-flow: column;
  }
}


.feature {
  width: 100vw;
  display: flex;
  justify-content: center;
  overflow: hidden;
  position: absolute;
  z-index: -1;
}

body {
  padding: 0;
}

.container {
  width: 100%;
  display: flex;
  flex-direction: row;
}

.container>div {
  width: 50%;
  transition: width ease-in-out 1s, all ease-in-out 1s;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
}

.container>div:hover {
  width: 100%;
}

.splash-title {
  font-size: 2rem;
}

.spalsh-option-list {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.splash-option {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  height: 5rem;
  gap: 2rem;
}

.container>div label {
  width: 0;
  display: block;
  text-wrap: nowrap;
  overflow: hidden;
  text-align: left;
  transition: width 1s ease-in-out;
}

.container>div:hover label {
  width: 180px;
}

.splash-option {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}


@media (max-aspect-ratio: 1/5) {
  .container {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  
  .container>div {
    width: 500px;
    height: 50%;
  }

  .container>div:hover {
    height: 100%;
    width: 500px;
  }
}

